# demo-food-discovery

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: deploy.yaml
backend/: .dockerignore  Dockerfile  dicovery.py  discovery.py  main.py  models.py  pyproject.toml  settings.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Modal.tsx  NearMeButton.tsx  Page.tsx  Rating.tsx  Search.tsx  TextSearch.tsx
frontend/src/context/: Search.tsx
frontend/src/interface/: Search.ts
frontend/src/provider/: Search.ts
processing/: embed.py  encoder.py  pyproject.toml  sync.sh  upload.py
